Update docs and use jitpack jars
Also remove the ALL shock acl type which no longer works